assets/sass/newStyles/_404.scss
.error-404 {
    width: 100%;
    min-height: 100vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    background-image: url('../../images/404/error-404.jpg');
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;

    & #header {
        top: 0;
    }

    #header.sticky {
        background: transparent;
    }

    & #header > a[href="#nav"] {
        background-image: url(../../images/icon/burger.svg);
    }

    & .text {
        margin: 0 auto;
        margin-top: 173px;
        text-align: center;
        padding-bottom: 50px;
        font-family: 'geometriabold';
        color: #08090b;
        font-weight: bold;
        font-style: normal;
        font-stretch: normal;

        @media (max-width: $xsmall) {
            width: 260px;
            font-size: 22px;
            line-height: 1.32;
        }

        @media (min-width: $xsmall) and (max-width: $small) {
            width: 440px;
            font-size: 36px;
            line-height: 1.28;
        }

        @media (min-width: $small) and (max-width: $large) {
            width: 500px;
            font-size: 24px;
            line-height: 1.75;
        }
        @media (min-width: $small) and (min-width: $large) {
            width: 970px;
            font-size: 50px;
            line-height: normal;
        }
    }

}

